Fixed nav z-index so portfolio images went over top

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,7 @@ header {
      justify-content: space-between;
      background-color: var(--primary-color);
      position: fixed;
+     z-index: 10;
      width: 100%;
      /* grabbed this from this generator. This just offers a simple solution to acheive soft shadows https://brumm.af/shadows */
      box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02), 0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035), 0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
